[package]
authors = ["Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"]
edition = "2018"
name = "hytra"
version = "0.1.0"

[dependencies]
atomic = "0.5"
crossbeam-utils = "0.8.3"
num-traits = "0.2"
thread_local = "1"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hytra"
harness = false
