[package]
authors = ["Gaëtan Cassiers"]
edition = "2018"
name = "hytra"
version = "0.1.1"
description = "Datastructure for fast multi-threaded updates."
readme = "README.md"
repository = "https://github.com/cassiersg/hytra"
license = "MIT OR Apache-2.0"
keywords = ["accumulator", "adder", "thread", "LongAdder"]
categories = ["concurrency", "data-structures"]

[dependencies]
atomic = "0.5"
crossbeam-utils = "0.8.3"
num-traits = "0.2"
thread_local = "1"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hytra"
harness = false
